--- a/client/index.html
+++ b/client/index.html
@@ -9,58 +9,134 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/style/main.css">
+  <link rel="stylesheet" href="assets/style/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kaisei+Tokumin&display=swap" rel="stylesheet">
   <title>gregslist-auth</title>
 </head>
 
-<body>
+<body class="bg-img">
   <header>
-    <nav class="navbar navbar-dark navbar-expand bg-dark text-light">
-      <a class="navbar-brand" href="#">
+    <nav class="navbar navbar-dark navbar-expand bg-dark text-light no-select justify-content-between">
+      <a class="navbar-brand ms-3" href="#">
         <img src="https://codeworks.blob.core.windows.net/public/assets/img/cw-mark.png" height="45" alt=""
           loading="lazy">
-        <span class="ml-2">gregslist-auth</span>
+        <span class="ms-2 custom-font">GREGSLIST</span>
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <!-- NAVLINKS -->
-        </div>
-      </div>
-      <div class="flex-grow-1 justify-content-end align-items-center d-flex" id="authstate"></div>
+      <span id="authstate"></span>
     </nav>
   </header>
-  <main id="app">
+  <main>
     <div class="container-fluid">
-      <div class="row my-3">
-        <div class="col-lg-5" id="auth-settings">
-          <div class="card p-2 skeleton-loader">
-            <div class="card-title p-2">
-              <div class="d-flex align-items-center">
-                <div class="skeleton-loader avatar"></div>
-                <div class="skeleton-loader text mx-2"></div>
+      <div class="row py-2">
+        <div class="col-lg-2 sidebar custom-font">
+          <ul class="list-group nav">
+          </ul>
+          <ul class="list-group nav">
+            <li class="list-group-item nav-link selectable" onclick="app.carsController.showCars()">
+              Cars
+            </li>
+            <li class="list-group-item nav-link selectable" onclick="app.housesController.showHouses()">
+              Houses
+            </li>
+            <li class="list-group-item nav-link selectable" onclick="app.jobsController.showJobs()">
+              Jobs
+            </li>
+            <li class="list-group-item nav-link selectable" onclick="app.animalsController.showAnimals()">
+              Animals
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-10 main-content">
+          <div class="row">
+            <div class="col text-end" id="controls">
+              <!-- Listing controls go here -->
+            </div>
+          </div>
+        </div>
+
+        <div class="row" id="listings">
+          <!-- Listings here -->
+        </div>
+
+        <div class="row">
+          <!-- forms go here -->
+          <div class="col-lg-8 m-auto" id="forms">
+            <form class="bg-white rounded p-3 shadow visually-hidden" onsubmit="app.carsController.addCar()"
+              id="car-form">
+              <div class="form-group">
+                <label for="make" class="">Make:</label>
+                <select name="make" id="make" required class="form-control">
+                  <option disabled selected value="">Please Choose your car make</option>
+                  <option>Honda</option>
+                  <option>Hyundai</option>
+                  <option>Tesla</option>
+                  <option>Toyota</option>
+                  <option>Other</option>
+                </select>
               </div>
-            </div>
-            <div class="card-body border-top">
-              <div class="skeleton-loader text block"></div>
-              <div class="skeleton-loader text block"></div>
-              <div class="skeleton-loader text block"></div>
-            </div>
+              <div class="form-group">
+                <label for="model" class="">Model:</label>
+                <input type="text" class="form-control" name="model" id="model" required>
+              </div>
+              <div class="form-group">
+                <label for="price" class="">Price:</label>
+                <input type="number" class="form-control" name="price" id="price" min="0" max="9999999">
+              </div>
+              <div class="form-group">
+                <label for="selling" class="">Is this for sale?</label>
+                <input type="checkbox" name="selling" id="selling" checked>
+              </div>
+              <div class="form-group">
+                <label for="mileage" class="">
+                  <span>mileage:</span>
+                  <span id="miles" class="ms-2">0</span>
+                </label>
+                <input type="range" name="mileage" id="mileage" min="1" max="1000"
+                  onchange="app.carsController.showMiles()" class="form-control" step=".05">
+              </div>
+              <div class="form-group">
+                <label for="color" class="">color:</label>
+                <input type="color" class="form-control" name="color" id="color">
+              </div>
+              <div class="form-group">
+                <label for="year" class="">year:</label>
+                <input type="year" class="form-control" name="year" id="year">
+              </div>
+              <div class="form-group">
+                <label for="description" class="">description:</label>
+                <textarea type="text" class="form-control" name="description" id="description" rows="5"></textarea>
+              </div>
+              <div class="form-group">
+                <label for="img" class="">img:</label>
+                <input type="url" class="form-control" name="img" id="img" required>
+              </div>
+              <div class="button-group my-3">
+                <button type="reset" class="btn btn-secondary">clear</button>
+                <button type="submit" class="btn btn-primary">submit</button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
     </div>
+    </div>
   </main>
-  <footer class="container-fluid bg-dark text-light">
-    <div class="row text-center">
-      <div class="col">
-        <p><small>Made with 💖 by CodeWorks</small></p>
-      </div>
+  <footer class="bg-dark text-light">
+    <div class="text-center no-select">
+      <p><small>Made with 💖 by Codeworks</small></p>
     </div>
   </footer>
 
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.4/axios.min.js"
+    integrity="sha512-lTLt+W7MrmDfKam+r3D2LURu0F47a3QaW5nF0c6Hl0JDZ57ruei+ovbg7BrZ+0bjVJ5YgzsAWE+RreERbpPE1g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+    crossorigin="anonymous"></script>
+  <script src="app/main.js" type="module"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.auth0.com/js/auth0-spa-js/1.15/auth0-spa-js.production.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/jakeoverall/auth0provider-client/browser/AuthProvider.browser.js"></script>
